--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.0.1",
   "description": "一个将中文翻译成拼音的库",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/zhujun24/chinese-to-pinyin.git"
@@ -13,12 +10,38 @@
   "keywords": [
     "Pinyin",
     "Chinese",
-    "Chinese-to-pinyin"
+    "Chinese-to-Pinyin"
   ],
   "author": "zhujun24",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/zhujun24/chinese-to-pinyin/issues"
   },
-  "homepage": "https://github.com/zhujun24/chinese-to-pinyin#readme"
+  "homepage": "https://github.com/zhujun24/chinese-to-pinyin#readme",
+  "devDependencies": {
+    "babel-eslint": "^6.1.2",
+    "babel-plugin-transform-async-to-generator": "^6.8.0",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "eslint": "^3.2.0",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^5.2.2",
+    "grunt": "^1.0.1",
+    "grunt-babel": "^6.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-eslint": "^19.0.0",
+    "load-grunt-tasks": "^3.5.0",
+    "pre-commit": "^1.1.3"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
+  },
+  "pre-commit": [
+    "lint"
+  ]
 }
