--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chinese-to-pinyin",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "一个将中文翻译成拼音的库",
   "main": "index.js",
   "repository": {
@@ -24,6 +24,7 @@
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
+    "chai": "^3.5.0",
     "eslint": "^3.2.0",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.12.0",
@@ -34,11 +35,12 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-eslint": "^19.0.0",
     "load-grunt-tasks": "^3.5.0",
+    "mocha": "^3.0.2",
     "pre-commit": "^1.1.3"
   },
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test/index",
     "lint": "eslint ."
   },
   "pre-commit": [
