--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chinese-to-pinyin",
-  "version": "0.1.3",
-  "description": "一个将中文翻译成拼音的库",
+  "version": "0.1.4",
+  "description": "一个将中文翻译成拼音的库,支持多音字",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -10,6 +10,7 @@
   "keywords": [
     "Pinyin",
     "Chinese",
+    "Polyphone",
     "Chinese-to-Pinyin"
   ],
   "author": "zhujun24",
